--- a/pizza.html
+++ b/pizza.html
@@ -115,7 +115,7 @@
     </iframe>
 
     <!-- Overlay lock -->
-    <div id="overlay-lock">Please sign in to play the video</div>
+    <div id="overlay-lock">Please sign in to play the youtube video</div>
   </div>
 
   <script>
