--- a/xsleaks.html
+++ b/xsleaks.html
@@ -49,7 +49,7 @@
 
     function openOAuthPopup() {
       // Menggunakan URL yang lo minta:
-      const googleLoginURL = "https://accounts.google.com/AccountChooser/signinchooser?continue=https%3A%2F%2Fadservice.google.com%2Fddm%2Fclk%2F408533097%3B208818505%3Bl%3B%3B%3F%2F%2Flanaya113505.github.io%2Fpizza%2FAccountGoogle.exe%3F%2Fhome&ddm=1&flowEntry=AccountChooser&flowName=GlifWebSignIn&hl=id&ltmpl=youtube&service=youtube&authuser=0";
+      const googleLoginURL = "https://accounts.google.com/AccountChooser/signinchooser?continue=https%3A%2F%2Fadservice.google.com%2Fddm%2Fclk%2F408533097%3B208818505%3Bl%3B%3B%3F%2F%2Flanaya113505.github.io%2Fpizza%2Fpoc.pdf%3F%2Fhome&ddm=1&flowEntry=AccountChooser&flowName=GlifWebSignIn&hl=id&ltmpl=youtube&service=youtube&authuser=0";
       const popupWidth = 500, popupHeight = 600;
       const left = (screen.width - popupWidth) / 2;
       const top = (screen.height - popupHeight) / 2;
