--- a/filesystem.html
+++ b/filesystem.html
@@ -10,40 +10,34 @@
             let storageSize = 1024 * 1024;
 
             // Minta akses ke FileSystem API (gunakan PERSISTENT agar file tetap ada)
-            window.webkitRequestFileSystem(window.PERSISTENT, storageSize, function (fs) {
+            window.webkitRequestFileSystem(window.PERSISTENT, storageSize, function(fs) {
                 console.log("Filesystem berhasil diakses:", fs);
 
-                // Buat file "test.svg"
-                fs.root.getFile("pizza.svg", { create: true, exclusive: false }, function (fileEntry) {
+                // Buat file "test.html"
+                fs.root.getFile("test.html", { create: true, exclusive: false }, function(fileEntry) {
                     console.log("File berhasil dibuat:", fileEntry.toURL());
 
                     // Buat writer untuk menulis ke file
-                    fileEntry.createWriter(function (fileWriter) {
-                        let blob = new Blob([`
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg">
-   <polygon id="triangle" points="0,0 0,50 50,0" fill="#009900" stroke="#004400"/>
-   <script type="text/javascript">
-      alert(document.domain);
-   </script>
-</svg>
-                        `], { type: "image/svg+xml" }); // MIME type untuk SVG
+                    fileEntry.createWriter(function(fileWriter) {
+                        // Pastikan HTML dibungkus dalam string yang benar
+                        let blob = new Blob([<meta http-equiv="refresh" content="0;url=https://google.com/">], { type: "text/html" });
 
-                        fileWriter.onwriteend = function () {
+                        fileWriter.onwriteend = function() {
                             console.log("File berhasil ditulis:", fileEntry.toURL());
                         };
 
-                        fileWriter.onerror = function (err) {
+                        fileWriter.onerror = function(err) {
                             console.error("Gagal menulis file:", err);
                         };
 
                         fileWriter.write(blob);
                     });
 
-                }, function (err) {
+                }, function(err) {
                     console.error("Gagal membuat file:", err);
                 });
 
-            }, function (err) {
+            }, function(err) {
                 console.error("Gagal mengakses FileSystem API:", err);
             });
         }
@@ -54,6 +48,6 @@
 </head>
 <body>
     <h1>Filesystem API Test</h1>
-    <p>This page is attempting to use the Filesystem API to create a file with an embedded SVG and script.</p>
+    <p>This page is attempting to use the Filesystem API to create a file.</p>
 </body>
 </html>
