--- a/filesystem.html
+++ b/filesystem.html
@@ -1,4 +1,3 @@
-<iframe src="https://tools.google.com/dlpage/japaneseinput/eula.html?"</iframe>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,5 +49,6 @@
 <body>
     <h1>Filesystem API Test</h1>
     <p>This page is attempting to use the Filesystem API to create a file.</p>
+    <iframe src="https://policies.google.com/terms?hl=en"</iframe>
 </body>
 </html>
