--- a/filesystem.html
+++ b/filesystem.html
@@ -49,6 +49,6 @@
 <body>
     <h1>Filesystem API Test</h1>
     <p>This page is attempting to use the Filesystem API to create a file.</p>
-    <iframe src=https://tools.google.com/dlpage/japaneseinput/eula.html?platform=%22%3E%3Cimg%20src=x%20onerror=alert(9)%3E"></iframe>
+    <iframe src="https://policies.google.com/terms?hl=en"></iframe>
 </body>
 </html>
